<resources>
    <string name="app_name">Tweeter</string>
    <string name="logoutButton">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="makeTweet">Type your tweet here</string>
    <string name="cancelTweet">Cancel</string>
    <string name="postTweet">Post</string>
    <string name="uploadImage">Upload Your Profile Picture</string>
    <string name="logoutMenuTitle">Upload Your Profile Picture</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>
    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleDate">"Sep 15 2020 10:49 PM"</string>
    <string name="sampleTweet">"Donald Trump likes to tweet too!"</string>
    <string name="sampleImageUrl">"Image URL: https://tinyurl.com/ycup4yof"</string>
    <string name="sampleVideoUrl">"Video URL: https://youtu.be/oHg5SJYRHA0"</string>
    <string name="sampleMentions">"@DonaldTrump, @ElonMusk"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: -42</string>
    <string name="followerCount">Followers: -42</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">\@username</string>
    <string name="password">Password</string>
</resources>
