<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.main.story.StoryFragment">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/userImageContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/userImage"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userImage"
            android:paddingRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName" />

        <TextView
            android:id="@+id/userAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userName"
            android:paddingLeft="5dp"
            tools:text="@string/sampleAlias" />
    </LinearLayout>

    <TextView
        android:id="@+id/timePosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_toEndOf="@id/userImage"
        android:paddingLeft="1dp"
        android:paddingTop="28dp"
        tools:text="@string/sampleDate" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:paddingLeft="25dp"
        android:paddingTop="60dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:text="@string/sampleTweet" />
</RelativeLayout>