<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".client.view.main.tweet.TweetFragment">
    <LinearLayout
        android:id="@+id/tweetButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelTweetButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cancelTweet" />

        <Button
            android:id="@+id/postTweetButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/postTweet" />
    </LinearLayout>

    <EditText
        android:id="@+id/tweetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/makeTweet"
        android:padding="20dp" />

</RelativeLayout>